First attempt of whole process

--- a/test_proj_calib.ipynb
+++ b/test_proj_calib.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
     "    rvec = None\n",
     "    tvec = None\n",
     "    ret = False\n",
-    "    homography = None\n",
+    "    H = None\n",
     "\n",
     "    # Detect markers and corners\n",
     "    corners, ids, rejected = cv2.aruco.detectMarkers(gray, dictionary, parameters=params)\n",
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
     "        circles3D = cv2.perspectiveTransform(circles, H)\n",
     "        circles3D = np.pad(circles3D, ((0,0), (0,0), (0,1)), 'constant', constant_values=0)\n",
     "        \n",
-    "    return ret, frame, circles, circles3D.astype(np.float32)"
+    "    return ret, frame, circles, circles3D.astype(np.float32) if circles3D is not None else None"
    ]
   },
   {
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -174,40 +174,20 @@
      "text": [
       "Prev cam calibration\n",
       "[[1.29949969e+03 0.00000000e+00 1.02062531e+03]\n",
-      " [0.00000000e+00 1.33411168e+03 5.47939718e+02]\n",
-      " [0.00000000e+00 0.00000000e+00 1.00000000e+00]]\n",
-      "[[ 0.05684467 -0.89925609  0.0040712   0.00297369  0.66275739]]\n",
-      "\n",
-      "Camera calibration\n",
-      "[[1.29949969e+03 0.00000000e+00 1.02062531e+03]\n",
       " [0.00000000e+00 1.33411168e+03 5.47939719e+02]\n",
       " [0.00000000e+00 0.00000000e+00 1.00000000e+00]]\n",
-      "[[ 0.05684484 -0.89925769  0.0040712   0.00297368  0.66276385]]\n",
-      "\n",
-      "Proj calibration\n",
-      "[[3.02967444e+03 0.00000000e+00 1.06224767e+03]\n",
-      " [0.00000000e+00 2.98762247e+03 8.79816610e+02]\n",
-      " [0.00000000e+00 0.00000000e+00 1.00000000e+00]]\n",
-      "[[-6.78268953e-01  6.99196895e+01 -1.85746535e-02  1.16009237e-02\n",
-      "  -1.50365221e+03]]\n",
-      "\n",
-      "Stereo calibration\n",
-      "Camera parameters\n",
-      "[[1.29949969e+03 0.00000000e+00 1.02062531e+03]\n",
-      " [0.00000000e+00 1.33411168e+03 5.47939719e+02]\n",
-      " [0.00000000e+00 0.00000000e+00 1.00000000e+00]] [[ 0.05684484 -0.89925769  0.0040712   0.00297368  0.66276385]]\n",
-      "Projector parameters\n",
-      "[[3.02967444e+03 0.00000000e+00 1.06224767e+03]\n",
-      " [0.00000000e+00 2.98762247e+03 8.79816610e+02]\n",
-      " [0.00000000e+00 0.00000000e+00 1.00000000e+00]] [[-6.78268953e-01  6.99196895e+01 -1.85746535e-02  1.16009237e-02\n",
-      "  -1.50365221e+03]]\n",
-      "Rotation and translation\n",
-      "[[-0.93259158  0.34344045  0.11100271]\n",
-      " [ 0.33317385  0.7008661   0.63069953]\n",
-      " [ 0.1388097   0.62516827 -0.7680472 ]]\n",
-      "[[0.24317823]\n",
-      " [0.52047993]\n",
-      " [4.30521995]]\n"
+      "[[ 0.05684484 -0.89925769  0.0040712   0.00297368  0.66276385]]\n"
+     ]
+    },
+    {
+     "ename": "error",
+     "evalue": "OpenCV(4.8.1) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\calib3d\\src\\calibration.cpp:3405: error: (-201:Incorrect size of input array) objectPoints should not contain empty vector of vectors of points in function 'cv::collectCalibrationData'\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
+      "\u001b[1;32mf:\\travaux\\Ecole\\Maitrise\\IFT6145-Vision\\ift6145-A23-3DScanner\\test_proj_calib.ipynb Cell 7\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/f%3A/travaux/Ecole/Maitrise/IFT6145-Vision/ift6145-A23-3DScanner/test_proj_calib.ipynb#W4sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m \u001b[39mprint\u001b[39m(cam_mtx)\n\u001b[0;32m     <a href='vscode-notebook-cell:/f%3A/travaux/Ecole/Maitrise/IFT6145-Vision/ift6145-A23-3DScanner/test_proj_calib.ipynb#W4sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m \u001b[39mprint\u001b[39m(cam_dist)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/f%3A/travaux/Ecole/Maitrise/IFT6145-Vision/ift6145-A23-3DScanner/test_proj_calib.ipynb#W4sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m ret, cam_mtx, cam_dist, cam_rvecs, cam_tvecs \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39;49mcalibrateCamera(obj_pts, cam_circle_pts, (\u001b[39m1920\u001b[39;49m,\u001b[39m1080\u001b[39;49m), cam_mtx, cam_dist, flags\u001b[39m=\u001b[39;49mcv2\u001b[39m.\u001b[39;49mCALIB_USE_INTRINSIC_GUESS)\n\u001b[0;32m     <a href='vscode-notebook-cell:/f%3A/travaux/Ecole/Maitrise/IFT6145-Vision/ift6145-A23-3DScanner/test_proj_calib.ipynb#W4sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39mCamera calibration\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/f%3A/travaux/Ecole/Maitrise/IFT6145-Vision/ift6145-A23-3DScanner/test_proj_calib.ipynb#W4sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m \u001b[39mprint\u001b[39m(cam_mtx)\n",
+      "\u001b[1;31merror\u001b[0m: OpenCV(4.8.1) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\calib3d\\src\\calibration.cpp:3405: error: (-201:Incorrect size of input array) objectPoints should not contain empty vector of vectors of points in function 'cv::collectCalibrationData'\n"
      ]
     }
    ],
@@ -215,7 +195,7 @@
     "obj_pts = []\n",
     "proj_circle_pts = []\n",
     "cam_circle_pts = []\n",
-    "calibration_folder = './calibration/CalibrationImgs/(old)projector/'\n",
+    "calibration_folder = './calibration/CalibrationImgs/projector/'\n",
     "# Calibrate projector\n",
     "images = glob.glob(os.path.join(calibration_folder,'*.jpg'))\n",
     "for fname in images:\n",
