Fix triangulate undistortion

--- a/notebooks/triangulate.ipynb
+++ b/notebooks/triangulate.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -104,24 +104,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cam_pts_homo = cv2.undistortPoints(np.expand_dims(cam_pts, axis=1), cam_mtx, cam_dist)\n",
-    "proj_pts_homo = cv2.undistortPoints(np.expand_dims(proj_pts, axis=1), proj_mtx, proj_dist)"
+    "newcameramtx, roi = cv2.getOptimalNewCameraMatrix(cam_mtx, cam_dist, (1920,1080), 1, (1920,1080))\n",
+    "newprojmtx, roi = cv2.getOptimalNewCameraMatrix(proj_mtx, proj_dist, (800,600), 1, (800,600))\n",
+    "cam_pts_homo = cv2.undistortPoints(np.expand_dims(cam_pts, axis=1), cam_mtx, cam_dist, None, newcameramtx)\n",
+    "proj_pts_homo = cv2.undistortPoints(np.expand_dims(proj_pts, axis=1), proj_mtx, proj_dist, None, newprojmtx)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-0.21842048 -0.10213836]]\n"
+      "[[320. 372.]]\n"
      ]
     }
    ],
@@ -131,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,27 +142,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ -6.1931696  -8.123304  -14.214143 ]\n"
+      "[ -7.325365  -10.5152445 -12.044128 ]\n"
      ]
     }
    ],
    "source": [
     "p3d_euc = p4d / p4d[3, :]\n",
     "p3d_euc = p3d_euc[:3, :]\n",
-    "p3d_euc = p3d_euc / 1000\n",
-    "print(p3d_euc[:, 30000])"
+    "#p3d_euc = p3d_euc / 1000\n",
+    "print(p3d_euc[:, 0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
