Better calibration of camera

--- a/notebooks/test_proj_calib.ipynb
+++ b/notebooks/test_proj_calib.ipynb
@@ -13,7 +13,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def distBoardToPoint(p, plane_point, plane_normal, plane_x, plane_y, epsilon=1e-06):\n",
+    "    p = p.reshape(3,)\n",
+    "    ray_direction = p / np.linalg.norm(p)\n",
+    "    ray_point = p\n",
+    "\n",
+    "    ndotu = plane_normal.dot(ray_direction.T)\n",
+    "\n",
+    "    if abs(ndotu) < epsilon:\n",
+    "        print (\"no intersection or line is within plane\")\n",
+    "\n",
+    "    w = ray_point - plane_point\n",
+    "    si = -plane_normal.dot(w.T) / ndotu\n",
+    "    v = w + si * ray_direction\n",
+    "    vx = v.dot(plane_x)\n",
+    "    vy = v.dot(plane_y)\n",
+    "    return np.array([vx, vy, 0])\n",
+    "\n",
+    "def intersectCirclesRaysToBoard(circles, rvec, t, K, dist_coef, init_param=False):\n",
+    "    circles_normalized = cv2.convertPointsToHomogeneous(cv2.undistortPoints(circles, K, dist_coef)) # z= 1\n",
+    "\n",
+    "    if not rvec.size:\n",
+    "        return None\n",
+    "\n",
+    "    R, _ = cv2.Rodrigues(rvec)\n",
+    "\n",
+    "    # https://stackoverflow.com/questions/5666222/3d-line-plane-intersection\n",
+    "    plane_x = R[0,:]\n",
+    "    plane_y = R[1,:]\n",
+    "    plane_normal = R[2,:] # last row of plane rotation matrix is normal to plane\n",
+    "    plane_point = t.reshape(3,)     # t is a point on the plane\n",
+    "    epsilon = 1e-06\n",
+    "\n",
+    "\n",
+    "    if init_param:\n",
+    "        w_cam = 1920\n",
+    "        h_cam = 1080\n",
+    "        w_proj = 1920\n",
+    "        h_proj = 1080\n",
+    "        # Find the coordinate of the origin\n",
+    "        R_cam = np.linalg.inv(R)\n",
+    "        s_w = w_cam/(w_proj*1.0)\n",
+    "        s_h = h_cam/(h_proj*1.0)\n",
+    "        origin2D = np.expand_dims(np.expand_dims([s_w * 452.0, s_h * 155.0], 0), 0)\n",
+    "        origin3D = cv2.convertPointsToHomogeneous(cv2.undistortPoints(origin2D, K, dist_coef))\n",
+    "        #print(\"From board center to origin: \\n\", -1 * distBoardToPoint(np.array(origin3D), plane_point, plane_normal, plane_x, plane_y, epsilon=epsilon))\n",
+    "\n",
+    "    circles_2d = []\n",
+    "    circles_3d = []\n",
+    "    for p in circles_normalized:\n",
+    "        p = p.reshape(3,)\n",
+    "        ray_direction = p / np.linalg.norm(p)\n",
+    "        ray_point = p\n",
+    "\n",
+    "        ndotu = plane_normal.dot(ray_direction.T)\n",
+    "\n",
+    "        if abs(ndotu) < epsilon:\n",
+    "            print (\"no intersection or line is within plane\")\n",
+    "\n",
+    "        w = ray_point - plane_point\n",
+    "        si = -plane_normal.dot(w.T) / ndotu\n",
+    "        v = w + si * ray_direction\n",
+    "        Psi = w + si * ray_direction + plane_point\n",
+    "        vx = v.dot(plane_x)\n",
+    "        vy = v.dot(plane_y)\n",
+    "        circles_2d.append(np.array([vx,vy,0.0]))\n",
+    "        circles_3d.append(Psi)\n",
+    "    return np.array(circles_2d), np.array(circles_3d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,13 +97,19 @@
     "    tvec = None\n",
     "    ret = False\n",
     "    H = None\n",
+    "    # SUB PIXEL CORNER DETECTION CRITERION\n",
+    "    criteria = (cv2.TERM_CRITERIA_EPS + cv2.TERM_CRITERIA_MAX_ITER, 100, 0.00001)\n",
     "\n",
     "    # Detect markers and corners\n",
     "    corners, ids, rejected = cv2.aruco.detectMarkers(gray, dictionary, parameters=params)\n",
+    "    #corners, ids, rejected, recovered = cv2.aruco.refineDetectedMarkers(frame, charuco_board, corners, ids, rejected, cameraMatrix=k, distCoeffs=dist)\n",
     "\n",
     "    if corners is not None and len(corners) > 0:\n",
     "        if draw:\n",
     "            frame = cv2.aruco.drawDetectedMarkers(frame, corners, ids)\n",
+    "        for corner in corners:\n",
+    "            cv2.cornerSubPix(gray, corner, (3,3), (-1,-1), criteria)\n",
+    "\n",
     "        ret, charuco_corners, charuco_ids = cv2.aruco.interpolateCornersCharuco(corners, ids, gray, charuco_board)\n",
     "        if charuco_ids is not None and len(charuco_ids) > 0:\n",
     "            if draw:\n",
@@ -48,14 +129,16 @@
     "    ret, circles = cv2.findCirclesGrid(gray, shape, flags=cv2.CALIB_CB_ASYMMETRIC_GRID + cv2.CALIB_CB_CLUSTERING)\n",
     "    \n",
     "    circles3D = None\n",
+    "    circles2D = None\n",
     "    if ret:\n",
     "        if draw:\n",
     "            frame = cv2.drawChessboardCorners(frame, shape, circles, ret)\n",
     "\n",
-    "        circles3D = cv2.perspectiveTransform(circles, H)\n",
-    "        circles3D = np.pad(circles3D, ((0,0), (0,0), (0,1)), 'constant', constant_values=0)\n",
+    "        #circles3D = cv2.perspectiveTransform(circles, H)\n",
+    "        circles2D, circles3D = intersectCirclesRaysToBoard(circles, rvec, tvec, k, dist, init_param=True)\n",
+    "        #circles3D = np.pad(circles3D, ((0,0), (0,0), (0,1)), 'constant', constant_values=0)\n",
     "        \n",
-    "    return ret, frame, circles, circles3D.astype(np.float32) if circles3D is not None else None\n",
+    "    return ret, frame, circles, circles2D, circles3D\n",
     "\n",
     "def build_circle_grid_pts(nb_col, nb_row, circle_r):\n",
     "    circle_2d_pts = np.zeros((nb_col*nb_row, 2), dtype=np.int32)\n",
@@ -74,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,13 +180,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Get previous calibration data for the camera\n",
-    "cam_mtx = np.load('../data/calib_results/mtx.npy')\n",
-    "cam_dist = np.load('../data/calib_results/dist.npy')\n",
+    "cam_mtx = np.load('../data/cam_mtx.npy')\n",
+    "cam_dist = np.load('../data/cam_dist.npy')\n",
     "\n",
     "# Get previous calibration data for the projector\n",
     "proj_mtx = np.load('../data/proj_mtx.npy')\n",
@@ -112,61 +195,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bad image: ../data/CalibrationImgs/projector\\calibrate_11.jpg\n",
-      "Bad image: ../data/CalibrationImgs/projector\\calibrate_9.jpg\n",
       "Prev cam calibration\n",
-      "[[1.40737141e+03 0.00000000e+00 9.78897273e+02]\n",
-      " [0.00000000e+00 1.41890077e+03 5.23344256e+02]\n",
+      "[[1.27655852e+03 0.00000000e+00 9.67103890e+02]\n",
+      " [0.00000000e+00 1.27655852e+03 5.23295300e+02]\n",
       " [0.00000000e+00 0.00000000e+00 1.00000000e+00]]\n",
-      "[[ 2.69266218e-01 -2.43668328e+00  1.17417181e-02 -9.97735370e-04\n",
-      "   1.22350833e+01]]\n",
-      "Camera calibration\n",
-      "[[1.40737141e+03 0.00000000e+00 9.78897273e+02]\n",
-      " [0.00000000e+00 1.41890077e+03 5.23344256e+02]\n",
-      " [0.00000000e+00 0.00000000e+00 1.00000000e+00]]\n",
-      "[[ 2.69266218e-01 -2.43668328e+00  1.17417181e-02 -9.97735370e-04\n",
-      "   1.22350833e+01]]\n",
-      "Error 0.7425013795557892\n",
       "\n",
       "Projector calibration\n",
-      "[[3.24241874e+03 0.00000000e+00 8.59356028e+02]\n",
-      " [0.00000000e+00 3.09451174e+03 4.33964493e+02]\n",
+      "[[3.59103399e+03 0.00000000e+00 1.11476879e+03]\n",
+      " [0.00000000e+00 3.59103399e+03 5.32319168e+02]\n",
       " [0.00000000e+00 0.00000000e+00 1.00000000e+00]]\n",
-      "[[0.12332225 1.87587495 0.03643235 0.02170967 0.09386456]]\n",
-      "Error 0.9915881562898377\n",
+      "ERROR 1.3282820826196495\n",
       "\n",
       "Stereo calibration\n",
       "Camera parameters\n",
-      "[[1.40737141e+03 0.00000000e+00 9.78897273e+02]\n",
-      " [0.00000000e+00 1.41890077e+03 5.23344256e+02]\n",
-      " [0.00000000e+00 0.00000000e+00 1.00000000e+00]] [[ 2.69266218e-01 -2.43668328e+00  1.17417181e-02 -9.97735370e-04\n",
-      "   1.22350833e+01]]\n",
+      "[[1.27655852e+03 0.00000000e+00 9.67103890e+02]\n",
+      " [0.00000000e+00 1.27655852e+03 5.23295300e+02]\n",
+      " [0.00000000e+00 0.00000000e+00 1.00000000e+00]]\n",
       "Projector parameters\n",
-      "[[3.24241874e+03 0.00000000e+00 8.59356028e+02]\n",
-      " [0.00000000e+00 3.09451174e+03 4.33964493e+02]\n",
-      " [0.00000000e+00 0.00000000e+00 1.00000000e+00]] [[0.12332225 1.87587495 0.03643235 0.02170967 0.09386456]]\n",
+      "[[3.59103399e+03 0.00000000e+00 1.11476879e+03]\n",
+      " [0.00000000e+00 3.59103399e+03 5.32319168e+02]\n",
+      " [0.00000000e+00 0.00000000e+00 1.00000000e+00]]\n",
       "Rotation and translation\n",
-      "[[ 0.89718776  0.00291274  0.44163971]\n",
-      " [-0.05511759  0.99289886  0.10542253]\n",
-      " [-0.4381965  -0.11892593  0.89097725]]\n",
-      "[[-0.3015349 ]\n",
-      " [ 0.04964757]\n",
-      " [ 0.74654682]]\n",
-      "Error 1.914177124611211\n"
+      "[[ 9.83394927e-01  4.43698637e-02 -1.75970829e-01]\n",
+      " [-4.49576779e-02  9.98988683e-01  6.46921315e-04]\n",
+      " [ 1.75821570e-01  7.27506071e-03  9.84395169e-01]]\n",
+      "[[0.01727404]\n",
+      " [0.00943438]\n",
+      " [0.27299232]]\n",
+      "ERROR 12.38734982958623\n"
      ]
     }
    ],
    "source": [
-    "obj_pts = []\n",
+    "world_pts = []\n",
     "proj_circle_pts = []\n",
     "cam_circle_pts = []\n",
+    "board_pts = []\n",
     "calibration_folder = '../data/CalibrationImgs/projector/'\n",
     "# Calibrate projector\n",
     "images = glob.glob(os.path.join(calibration_folder,'*.jpg'))\n",
@@ -180,40 +251,50 @@
     "\n",
     "    if ret:\n",
     "        # Find projected circles\n",
-    "        ret, img, circles_2d_cam, circles_3d = detect_circle_grid(img, gray, cam_mtx, cam_dist, (nb_col, nb_row), rvec, tvec, H, draw=False)\n",
+    "        ret, img, circles_2d_cam, circle_board, circles_3d = detect_circle_grid(img, gray, cam_mtx, cam_dist, (nb_col, nb_row), rvec, tvec, H, draw=False)\n",
     "        if ret:\n",
-    "            obj_pts.append(circles_3d)\n",
+    "            world_pts.append(circles_3d)\n",
+    "            board_pts.append(circle_board)\n",
     "            proj_circle_pts.append(np.expand_dims(circle_2d.astype(np.float32), axis=1))\n",
     "            cam_circle_pts.append(circles_2d_cam)\n",
     "        else:\n",
     "            print('Bad image:', fname)\n",
     "print('Prev cam calibration')\n",
     "print(cam_mtx)\n",
-    "print(cam_dist)\n",
+    "#print(cam_dist)\n",
     "\n",
-    "print('Camera calibration')\n",
-    "ret, cam_mtx, cam_dist, cam_rvecs, cam_tvecs = cv2.calibrateCamera(obj_pts, cam_circle_pts, (1920,1080), None, None)\n",
-    "print(cam_mtx)\n",
-    "print(cam_dist)\n",
-    "print('Error', ret)\n",
+    "board_pts = np.array(board_pts).astype('float32')\n",
+    "world_pts = np.array(world_pts).astype('float32')\n",
+    "# print('Camera calibration')\n",
+    "# ret, cam_mtx, cam_dist, cam_rvecs, cam_tvecs = cv2.calibrateCamera(board_pts, cam_circle_pts, (1920,1080), None, None)\n",
+    "# print(cam_mtx)\n",
+    "# print(cam_dist)\n",
+    "# print('Error', ret)\n",
+    "flags = (cv2.CALIB_USE_INTRINSIC_GUESS + cv2.CALIB_RATIONAL_MODEL + cv2.CALIB_FIX_ASPECT_RATIO)\n",
     "\n",
     "print('\\nProjector calibration')\n",
-    "ret, proj_mtx, proj_dist, proj_rvecs, proj_tvecs = cv2.calibrateCamera(obj_pts, proj_circle_pts, (1920,1080), None, None)\n",
+    "dist_coef_proj = np.array([0.0, 0.0, 0.0, 0.0, 0.0],dtype=np.float32)\n",
+    "K_proj = np.array([[3000, 0, 1920/2.0],[0,3000,1080/2.0],[0,0,1]],dtype=np.float32)\n",
+    "#ret, proj_mtx, proj_dist, proj_rvecs, proj_tvecs = cv2.calibrateCamera(board_pts, proj_circle_pts, (1920,1080), K_proj, dist_coef_proj, flags =  cv2.CALIB_ZERO_TANGENT_DIST + cv2.CALIB_FIX_K1  + cv2.CALIB_FIX_K2 + cv2.CALIB_FIX_K3 + cv2.CALIB_FIX_K4 + cv2.CALIB_FIX_K5 + cv2.CALIB_FIX_K6)\n",
+    "#ret, proj_mtx, proj_dist, proj_rvecs, proj_tvecs = cv2.calibrateCamera(board_pts, proj_circle_pts, (1920,1080), K_proj, None, flags=cv2.CALIB_USE_INTRINSIC_GUESS)\n",
+    "ret, proj_mtx, proj_dist, proj_rvecs, proj_tvecs = cv2.calibrateCamera(board_pts, proj_circle_pts, (1920,1080), K_proj, None, flags=flags)\n",
     "print(proj_mtx)\n",
-    "print(proj_dist)\n",
-    "print('Error', ret)\n",
+    "#print(proj_dist.T)\n",
+    "print('ERROR', ret)\n",
     "\n",
     "print('\\nStereo calibration')\n",
-    "error, cam_mtx, cam_dist, proj_mtx, proj_dist, proj_R, proj_T,_,_ = cv2.stereoCalibrate(obj_pts, cam_circle_pts, proj_circle_pts, cam_mtx, cam_dist, proj_mtx, proj_dist, (1920,1080), flags=cv2.CALIB_FIX_INTRINSIC) #, flags=cv2.CALIB_USE_INTRINSIC_GUESS)#\n",
+    "error, cam_mtx, cam_dist, proj_mtx, proj_dist, proj_R, proj_T,_,_ = cv2.stereoCalibrate(world_pts, cam_circle_pts, proj_circle_pts, cam_mtx, cam_dist, proj_mtx, proj_dist, (1920,1080), flags=cv2.CALIB_RATIONAL_MODEL + cv2.CALIB_FIX_ASPECT_RATIO + cv2.CALIB_FIX_INTRINSIC) #, flags=cv2.CALIB_USE_INTRINSIC_GUESS)#\n",
     "#error, cam_mtx, cam_dist, proj_mtx, proj_dist, proj_R, proj_T,_,_ = cv2.stereoCalibrate(obj_pts, cam_circle_pts, proj_circle_pts, cam_mtx, cam_dist, proj_mtx, proj_dist, (1920,1080), flags=cv2.CALIB_USE_INTRINSIC_GUESS) #, flags=cv2.)#\n",
     "print('Camera parameters')\n",
-    "print(cam_mtx, cam_dist)\n",
+    "print(cam_mtx)\n",
+    "#print(cam_dist.T)\n",
     "print('Projector parameters')\n",
-    "print(proj_mtx, proj_dist)\n",
+    "print(proj_mtx)\n",
+    "#print(proj_dist.T)\n",
     "print('Rotation and translation')\n",
     "print(proj_R)\n",
     "print(proj_T)\n",
-    "print('Error', error)\n",
+    "print('ERROR', error)\n",
     "\n",
     "R1, R2, P1, P2, Q, _, _ = cv2.stereoRectify(cam_mtx, cam_dist, proj_mtx, proj_dist, (1920,1080), proj_R, proj_T)\n"
    ]
@@ -293,7 +374,7 @@
     "trans = np.linalg.inv(rMat) @ -tvec + proj_T\n",
     "\n",
     "i = 9\n",
-    "test = np.array([[obj_pts[id][i][0][0]], [obj_pts[id][i][0][1]], [1.0]], dtype=np.float32)\n",
+    "test = np.array([[world_pts[id][i][0][0]], [world_pts[id][i][0][1]], [1.0]], dtype=np.float32)\n",
     "test2, _ = cv2.projectPoints(test, (0,0,0), (0,0,0), cam_mtx, cam_dist)\n",
     "test3, _ = cv2.projectPoints(test, proj_R, proj_T, proj_mtx, proj_dist)\n",
     "print(test3)\n",
@@ -328,7 +409,7 @@
     "import matplotlib.pyplot as plt\n",
     "id = 1\n",
     "rvec_proj, _ = cv2.Rodrigues(proj_R)\n",
-    "pts_3d = obj_pts.copy()\n",
+    "pts_3d = world_pts.copy()\n",
     "\n",
     "pts_3d[id][:,:, 2] = np.ones_like(pts_3d[id][:,:,2])\n",
     "test3, _ = cv2.projectPoints(pts_3d[id], proj_R, proj_T, proj_mtx, proj_dist)\n",
@@ -359,7 +440,7 @@
     "# print(rvecs[id].T)\n",
     "# print(tvecs[id].T)\n",
     "i = 2\n",
-    "test = np.array([[obj_pts[id][i][0]], [obj_pts[id][i][1]], [1.0]], dtype=np.float32)\n",
+    "test = np.array([[world_pts[id][i][0]], [world_pts[id][i][1]], [1.0]], dtype=np.float32)\n",
     "\n",
     "\n",
     "# rTot = rMat @ proj_R \n",
@@ -403,7 +484,7 @@
     "import matplotlib.pyplot as plt\n",
     "id = 8\n",
     "\n",
-    "circles3D_reprojected, _ = cv2.projectPoints(obj_pts[id], proj_rvecs[id], proj_tvecs[id], proj_mtx, proj_dist)\n",
+    "circles3D_reprojected, _ = cv2.projectPoints(world_pts[id], proj_rvecs[id], proj_tvecs[id], proj_mtx, proj_dist)\n",
     "circles3D_reprojected = circles3D_reprojected[:, 0, :]\n",
     "\n",
     "plt.plot(circle_2d[:, 0], circle_2d[:, 1], 'bo', markersize=5)\n",
