--- a/notebooks/triangulate.ipynb
+++ b/notebooks/triangulate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,14 @@
     "import matplotlib.pyplot as plt\n",
     "import cv2\n",
     "from tqdm import tqdm\n",
-    "import shutil, os"
+    "import shutil, os\n",
+    "import open3d as o3d\n",
+    "from open3d import core as o3c"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,17 +47,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[445.27884 359.43002]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "arrwidth = 1920\n",
     "arrheight = 1080\n",
@@ -63,10 +57,10 @@
     "cam_pts = []\n",
     "proj_pts = []\n",
     "\n",
-    "# for i in range(500, 1300):\n",
-    "#     for j in range(200, 800):\n",
-    "for i in range(1920):\n",
-    "    for j in range(1080):\n",
+    "for i in range(500, 1300):\n",
+    "    for j in range(200, 800):\n",
+    "# for i in range(1920):\n",
+    "#     for j in range(1080):\n",
     "        h_value = h_pixels[j, i]\n",
     "        v_value = v_pixels[j, i]\n",
     "        if h_value == -1 or v_value == -1:\n",
@@ -78,31 +72,42 @@
     "            proj_pts.append([ h_value, v_value])\n",
     "\n",
     "cam_pts = np.array(cam_pts, dtype=np.float32)\n",
-    "proj_pts = np.array(proj_pts, dtype=np.float32)\n",
-    "\n",
-    "newcameramtx, roi = cv2.getOptimalNewCameraMatrix(cam_mtx, cam_dist, (1920,1080), 1, (1920,1080))\n",
-    "newprojmtx, roi = cv2.getOptimalNewCameraMatrix(proj_mtx, proj_dist, (1920,1080), 1, (1920,1080))\n",
-    "cam_pts_homo = cv2.undistortPoints(np.expand_dims(cam_pts, axis=1), cam_mtx, cam_dist, None, newcameramtx)\n",
-    "proj_pts_homo = cv2.undistortPoints(np.expand_dims(proj_pts, axis=1), proj_mtx, proj_dist, None, newprojmtx)\n",
-    "\n",
-    "print(proj_pts_homo[0])"
+    "proj_pts = np.array(proj_pts, dtype=np.float32)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "p4d = cv2.triangulatePoints(P1, P2, cam_pts_homo, proj_pts_homo)\n",
+    "# newcameramtx, roi = cv2.getOptimalNewCameraMatrix(cam_mtx, cam_dist, (1920,1080), 1, (1920,1080))\n",
+    "# newprojmtx, roi = cv2.getOptimalNewCameraMatrix(proj_mtx, proj_dist, (1920,1080), 1, (1920,1080))\n",
+    "# cam_pts_homo = cv2.undistortPoints(np.expand_dims(cam_pts, axis=1), cam_mtx, cam_dist, None, newcameramtx)\n",
+    "# proj_pts_homo = cv2.undistortPoints(np.expand_dims(proj_pts, axis=1), proj_mtx, proj_dist, None, newprojmtx)\n",
     "\n",
-    "p3d_euc = p4d / p4d[3, :]\n",
-    "p3d_euc = p3d_euc[:3, :]\n",
+    "cam_pts_homo = cv2.convertPointsToHomogeneous(cv2.undistortPoints(np.expand_dims(cam_pts, axis=1), cam_mtx, cam_dist, R=proj_R))[:,0].T\n",
+    "proj_pts_homo = cv2.convertPointsToHomogeneous(cv2.undistortPoints(np.expand_dims(proj_pts, axis=1), proj_mtx, proj_dist))[:,0].T\n",
+    "T = proj_T[:,0]\n",
     "\n",
-    "import open3d as o3d\n",
-    "import open3d.core as o3c\n",
-    "pcd = o3d.t.geometry.PointCloud(o3c.Tensor(p3d_euc.T, o3c.float32))\n",
-    "\n",
+    "TLen = np.linalg.norm(T)\n",
+    "NormedL = cam_pts_homo/np.linalg.norm(cam_pts_homo, axis=0)\n",
+    "alpha = np.arccos(np.dot(-T, NormedL)/TLen)\n",
+    "degalpha = alpha*180/np.pi\n",
+    "beta = np.arccos(np.dot(T, proj_pts_homo)/(TLen*np.linalg.norm(proj_pts_homo, axis=0)))\n",
+    "degbeta = beta*180/np.pi\n",
+    "gamma = np.pi - alpha - beta\n",
+    "P_len = TLen*np.sin(beta)/np.sin(gamma)\n",
+    "Pts = NormedL*P_len"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pcd = o3d.t.geometry.PointCloud(o3c.Tensor(Pts.T, o3c.float32))\n",
     "o3d.visualization.draw_geometries([pcd.to_legacy()])"
    ]
   }
