Add colors in triangulate

--- a/notebooks/triangulate.ipynb
+++ b/notebooks/triangulate.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
+      "[Open3D INFO] WebRTC GUI backend enabled.\n",
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -17,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +43,12 @@
     "P1 =        np.load('../data/P1.npy')\n",
     "P2 =        np.load('../data/P2.npy')\n",
     "\n",
-    "# scale_x = 1920 / 800\n",
-    "# scale_y = 1080 / 600\n",
-    "# proj_mtx[0, :] = proj_mtx[0, :] * scale_x\n",
-    "# proj_mtx[1, :] = proj_mtx[1, :] * scale_y\n",
-    "# print(proj_mtx)\n",
-    "\n",
+    "proj_w, proj_h = (1920, 1080)\n",
+    "cam_w, cam_h = (1920, 1080)\n",
+    "scale_x = 1920 / proj_w\n",
+    "scale_y = 1080 / proj_h\n",
+    "proj_mtx[0, :] = proj_mtx[0, :] * scale_x\n",
+    "proj_mtx[1, :] = proj_mtx[1, :] * scale_y\n",
     "\n",
     "base_path = '../data/recordings/record_0/'\n",
     "h_pixels = np.load(base_path+'h_pixels.npy')\n",
@@ -47,15 +57,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "arrwidth = 1920\n",
-    "arrheight = 1080\n",
-    "\n",
     "cam_pts = []\n",
     "proj_pts = []\n",
+    "colors = []\n",
+    "# Extract color\n",
+    "img_white = cv2.imread(base_path + '/frame_1.jpg', cv2.IMREAD_COLOR)\n",
+    "img_white = cv2.cvtColor(img_white, cv2.COLOR_BGR2RGB)\n",
     "\n",
     "for i in range(500, 1300):\n",
     "    for j in range(200, 800):\n",
@@ -67,9 +78,10 @@
     "            pass\n",
     "        else:\n",
     "            cam_pts.append([i,j])\n",
-    "            h_value = min(arrwidth-1, h_value)\n",
-    "            v_value = min(arrheight-1, v_value)\n",
+    "            h_value = min(proj_w-1, h_value)\n",
+    "            v_value = min(proj_h-1, v_value)\n",
     "            proj_pts.append([ h_value, v_value])\n",
+    "            colors.append(img_white[j, i, :])\n",
     "\n",
     "cam_pts = np.array(cam_pts, dtype=np.float32)\n",
     "proj_pts = np.array(proj_pts, dtype=np.float32)"
@@ -77,11 +89,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# newcameramtx, roi = cv2.getOptimalNewCameraMatrix(cam_mtx, cam_dist, (1920,1080), 1, (1920,1080))\n",
+    "# newcameramtx, roi = cv2.getOptimalNewCameraMatrix(cam_mtx, cam_dist, (800,600), 1, (800,600))\n",
     "# newprojmtx, roi = cv2.getOptimalNewCameraMatrix(proj_mtx, proj_dist, (1920,1080), 1, (1920,1080))\n",
     "# cam_pts_homo = cv2.undistortPoints(np.expand_dims(cam_pts, axis=1), cam_mtx, cam_dist, None, newcameramtx)\n",
     "# proj_pts_homo = cv2.undistortPoints(np.expand_dims(proj_pts, axis=1), proj_mtx, proj_dist, None, newprojmtx)\n",
@@ -90,6 +102,7 @@
     "proj_pts_homo = cv2.convertPointsToHomogeneous(cv2.undistortPoints(np.expand_dims(proj_pts, axis=1), proj_mtx, proj_dist))[:,0].T\n",
     "T = proj_T[:,0]\n",
     "\n",
+    "# Took from https://github.com/caoandong/Projector_Calibration/blob/master/visual_calib.py\n",
     "TLen = np.linalg.norm(T)\n",
     "NormedL = cam_pts_homo/np.linalg.norm(cam_pts_homo, axis=0)\n",
     "alpha = np.arccos(np.dot(-T, NormedL)/TLen)\n",
@@ -98,17 +111,16 @@
     "degbeta = beta*180/np.pi\n",
     "gamma = np.pi - alpha - beta\n",
     "P_len = TLen*np.sin(beta)/np.sin(gamma)\n",
-    "Pts = NormedL*P_len"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "Pts = NormedL*P_len\n",
+    "\n",
+    "\n",
+    "colors_array = np.array(colors).astype(np.float64)/255.0\n",
+    "\n",
     "pcd = o3d.t.geometry.PointCloud(o3c.Tensor(Pts.T, o3c.float32))\n",
-    "o3d.visualization.draw_geometries([pcd.to_legacy()])"
+    "pcd = pcd.to_legacy()\n",
+    "pcd.colors = o3d.cpu.pybind.utility.Vector3dVector(colors_array)\n",
+    "\n",
+    "o3d.visualization.draw_geometries([pcd])"
    ]
   }
  ],
